# xaydungnhanvatao

./: .dockerignore  .gitignore  ARCHITECTURE.md  COMPLETE_DESIGN_SUMMARY.md  DOCKER_CONFIGURATIONS.md  FINAL_SUMMARY.md  MODULE_DEPENDENCIES.md  Makefile  PART_1_3D_CHARACTER_PIPELINE.md  PART_6_LLM_INTEGRATION.md  PART_AI_CHARACTER_FRAMEWORK.md  PART_AI_PERSONALITY_ENGINE.md  PART_AI_SCHEDULER.md  PART_LEARNING_ENGINE.md  PART_MOTIVATION_EMOTION_FUSION.md  PART_MOTIVATION_ENGINE.md  PART_MULTI_AGENT_SYSTEM.md  PART_PLUGIN_SDK.md  PART_PROCEDURAL_ANIMATION.md  PART_RENDERING_PIPELINE.md  PART_VISION_MEMORY.md  PROJECT_SUMMARY.md  README.md  REMAINING_PARTS_SUMMARY.md  ROADMAP.md  TECH_STACK_FINAL.md  UPDATED_ARCHITECTURE.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-infra.txt  requirements-ml.txt  requirements-vision.txt  requirements-voice.txt  requirements.txt  test.txt
.github/workflows/: ci-cd.yml
ai-companion-platform/: .gitignore  README.md  docker-compose.yml
ai-companion-platform/backend/services/llm-service/: .env.example  Dockerfile  README.md  pyproject.toml
ai-companion-platform/backend/services/llm-service/app/api/v1/: llm.py
ai-companion-platform/backend/services/llm-service/app/core/: __init__.py  exceptions.py
ai-companion-platform/backend/services/llm-service/app/db/: database.py  redis.py  session.py
ai-companion-platform/backend/services/llm-service/app/models/: __init__.py
ai-companion-platform/backend/services/llm-service/app/schemas/: __init__.py
ai-companion-platform/backend/services/llm-service/app/services/: __init__.py  base_provider.py  model_router.py  openai_provider.py
ai-companion-platform/backend/services/llm-service/config/: settings.py
ai-companion-platform/backend/services/llm-service/tests/integration/: test_api.py
ai-companion-platform/backend/services/llm-service/tests/unit/: test_llm_service.py
backend/: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt
backend/docker/: Dockerfile.animation  Dockerfile.asset  Dockerfile.auth  Dockerfile.character  Dockerfile.conversation  Dockerfile.emotion  Dockerfile.learning  Dockerfile.llm  Dockerfile.memory  Dockerfile.motivation  Dockerfile.physics  Dockerfile.plugin  Dockerfile.reflection  Dockerfile.scheduler  Dockerfile.social  Dockerfile.stt  Dockerfile.tts  Dockerfile.vision  Dockerfile.vision_memory  Dockerfile.world
backend/nginx/: nginx.conf
backend/tests/: conftest.py  test_emotion_service.py  test_llm_service.py  test_memory_service.py
docs/api/: animation.openapi.json  asset.openapi.json  avatar.openapi.json  brain.openapi.json  character.openapi.json  conversation.openapi.json  multi-agent.openapi.json  physics.openapi.json  plugin.openapi.json  scheduler.openapi.json  social.openapi.json  stt.openapi.json  tts.openapi.json  vision-memory.openapi.json  vision.openapi.json  world.openapi.json
docs/architecture/: PIPELINE_ARCHITECTURE.md  SOURCE_TREE.md  UPDATED_ARCHITECTURE.md
docs/design/: PART_2_ENGINE_COMPARISON.md  PART_3_CHARACTER_DISPLAY_PHYSICS.md  PART_4_COMPUTER_VISION_PIPELINE.md  PART_5_AI_BRAIN_PIPELINE.md  PART_ANIMATION_GRAPH.md  PART_REFLECTION_ENGINE.md  PART_SOCIAL_ENGINE.md  PART_WORLD_SIMULATION.md
infra/docker/: Dockerfile.animation  Dockerfile.asset  Dockerfile.auth  Dockerfile.avatar  Dockerfile.brain  Dockerfile.character  Dockerfile.conversation  Dockerfile.emotion  (+16 more)
multi_agent_system/: README.md  docker-compose.yml
scripts/: auto_setup_unity.ps1  build.ps1  clean.ps1  deploy.ps1  dev.ps1  test.ps1
src/services/voice/: pyproject.toml  stt.py  tts.py
src/services/voice/app/core/: exceptions.py
src/services/voice/app/schemas/: voice.py
src/services/voice/config/: settings.py
tests/: requirements.txt
unity-project/: IMPLEMENTATION_SUMMARY.md  README.md
(+231 files in other folders)
