[tool.poetry]
name = "voice-service"
version = "0.1.0"
description = "Voice Service for AI Companion Platform - STT, TTS, and Voice Cloning"
authors = ["AI Companion Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
asyncpg = "^0.29.0"
redis = {extras = ["hiredis"], version = "^5.0.0"}
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.0"
httpx = "^0.25.2"

# Speech-to-Text
openai = "^1.3.0"
deepgram-sdk = "^2.12.0"
faster-whisper = "^0.10.0"

# Text-to-Speech
elevenlabs = "^0.2.26"
torch = "^2.1.0"
torchaudio = "^2.1.0"
transformers = "^4.35.0"
TTS = "^0.22.0"

# Audio Processing
numpy = "^1.26.0"
scipy = "^1.11.0"
librosa = "^0.10.0"
soundfile = "^0.12.1"
pydub = "^0.25.1"

# Monitoring
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-instrumentation-fastapi = "^0.42b0"
prometheus-client = "^0.19.0"
prometheus-fastapi-instrumentator = "^6.0.0"
structlog = "^0.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
ruff = "^0.1.6"
black = "^23.11.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
