[tool.poetry]
name = "llm-service"
version = "0.1.0"
description = "LLM Service for AI Companion Platform - Multi-LLM support with intelligent routing"
authors = ["AI Companion Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
asyncpg = "^0.29.0"
redis = {extras = ["hiredis"], version = "^5.0.0"}
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.0"
httpx = "^0.25.2"
openai = "^1.3.0"
anthropic = "^0.7.0"
langchain = "^0.1.0"
langchain-openai = "^0.0.2"
langchain-anthropic = "^0.0.1"
tiktoken = "^0.5.2"
transformers = "^4.35.0"
torch = "^2.1.0"
accelerate = "^0.25.0"
sentencepiece = "^0.1.99"
protobuf = "^4.25.1"
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-instrumentation-fastapi = "^0.42b0"
opentelemetry-instrumentation-httpx = "^0.42b0"
opentelemetry-exporter-jaeger-thrift = "^1.21.0"
prometheus-client = "^0.19.0"
prometheus-fastapi-instrumentator = "^6.0.0"
structlog = "^0.10.0"
rich = "^13.7.0"
aiofiles = "^23.2.1"
orjson = "^3.9.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
httpx-mock = "^0.23.0"
ruff = "^0.1.6"
black = "^23.11.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
